# Cabana

./: CMakeLists.txt  README_scs.md
cmake/: bob.cmake
core/: CMakeLists.txt
core/src/: CMakeLists.txt
